fix control bar style on mobile

--- a/src/assets/stylesheets/_global.scss
+++ b/src/assets/stylesheets/_global.scss
@@ -15,11 +15,11 @@
 
 #my-scrollbar {
     width: 100%;
-    height: calc(100vh - 65px);
+    height: calc(100vh - 48px);
     overflow: auto;
 
     @include respond(tablet) {
-        height: calc(100vh - 115px);
+        height: calc(100vh - 96px);
     }
 
     .scroll-content {
