--- a/src/assets/stylesheets/_mixin.scss
+++ b/src/assets/stylesheets/_mixin.scss
@@ -35,7 +35,7 @@
 
 @mixin respond($breakpoint) {
     @if $breakpoint==tablet {
-        @media only screen and (max-width: 1050px) {
+        @media only screen and (max-width: 1250px) {
             @content;
         }
     }
