--- a/src/components/navbarMobile/NavbarMobile.scss
+++ b/src/components/navbarMobile/NavbarMobile.scss
@@ -9,7 +9,7 @@
     width: 100%;
     position: relative;
     bottom: 0;
-    height: 50px;
+    height: 48px;
     left: 0;
     right: 0;
     z-index: 1000;
