--- a/src/components/sidebarRight/SidebarRight.scss
+++ b/src/components/sidebarRight/SidebarRight.scss
@@ -13,7 +13,7 @@
     position: absolute;
     right: -270px;
     transform-origin: bottom right;
-    height: calc(100vh - 115px);
+    height: calc(100vh - 96px);
   }
 
   &__categories {
